--- a/weblogs.html
+++ b/weblogs.html
@@ -186,7 +186,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6" style="display:flex;align-items: center;justify-content: center;">
-            <img src="/images/map.jpeg" style="width:100%">
+            <img src="./images/map.jpeg" style="width:100%">
           </div>
           <div class="col-lg-6">
             <form action="/action_page.php" style="color:#163172;margin-bottom: 60px;">
